# MCGA

./: pyproject.toml  requirements_txt.txt
src/mcga/: pyproject.toml
