[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mcga"
version = "0.1.0"
description = "Green‐chemistry reaction greenness calculator"
authors = [
    "Jiho <jiho.keum@epfl.ch>",
    "Bilel Noé Bouzouaid <bilel-noe.bouzouaid@epfl.ch>",
    "Alexia Dade <alexia.dade@epfl.ch>",
    "Ylann Willemin <ylann.willemin@epfl.ch>"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/jihokeum/mcga"
repository = "https://github.com/jihokeum/mcga"
documentation = "https://github.com/jihokeum/mcga"

# 👇 Voici la ligne essentielle pour que Poetry trouve ton package
packages = [{ include = "mcga", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "<2"
streamlit = "*"
streamlit-ketcher = "*"
pubchempy = "*"
requests = "*"
google-generativeai = "*"
jupyterlab = "*"
chempy = "*"
py3Dmol = "*"

[tool.poetry.extras]
test = ["hypothesis", "pytest", "pytest-cov", "tox", "genbadge[coverage]"]
doc = ["furo", "myst-parser", "sphinx>=5", "sphinx-copybutton"]

[tool.poetry.plugins]
"console_scripts" = []
